update dist_doc_DATA for README.md rename

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,7 @@ dist_os_SCRIPTS = create export import rename gnt-cobbler.py
 dist_os_DATA = ganeti_api_version variants.list
 os_DATA = common.sh
 
-dist_doc_DATA = COPYING NEWS README
+dist_doc_DATA = COPYING NEWS README.md
 
 EXTRA_DIST = common.sh.in defaults 
 #	examples/hooks/grub \
